--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>my second repo</title>
 </head>
 <body>
-    
+    <h1>i can push to git hub</h1>
+    <h2>hi hi hi hi</h2>
+    <h3>huhuhu hyhyhy</h3>
 </body>
 </html>
