--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h2>hi hi hi hi</h2>
     <h3>huhuhu hyhyhy</h3>
     <p>sjhgfh sjdhdbfbhu whgf wgfu uwuhg wghgw wyrg wf </p>
+    <img src="kyle.jpg" alt="">
+    <img src="kyle.jpg" alt="">
 </body>
 </html>
